external-crates/move/crates/move-compiler/tests/move_check/typing/assert_invalid_cond_and_code_type.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E04007]: incompatible types
  ┌─ tests/move_check/typing/assert_invalid_cond_and_code_type.move:3:9
  │
3 │         assert!(42, false);
  │         ^^^^^^^^^^^^^^^^^^
  │         │       │
  │         │       Given: integer
  │         Invalid call of 'assert'. Invalid argument for parameter '0'
  │         Expected: 'bool'

error[E04035]: invalid constant usage in error context
  ┌─ tests/move_check/typing/assert_invalid_cond_and_code_type.move:3:21
  │
3 │         assert!(42, false);
  │                     ^^^^^
  │                     │
  │                     Invalid error code for assertion, expected a u64 or constant declared with '#[error]' annotation
  │                     If you want to use a non-u64 as an abort code, you must use a '#[error]' attribute on a constant
  │
  = Non-u64 constants can only be used as error codes if the '#[error]' attribute is added to them.
